--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@ant-design/nextjs-registry": "^1.0.2",
     "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@tanstack/react-query": "^5.81.5",
+    "@tinymce/tinymce-react": "^6.2.1",
     "antd": "^5.26.3",
     "antd-img-crop": "^4.25.0",
     "axios": "^1.10.0",
     "crypto-js": "^4.2.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.20.1",
+    "html-react-parser": "^5.2.5",
     "next": "15.3.4",
     "nextjs-toploader": "^3.8.16",
     "react": "^19.0.0",
