--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.13",
     "framer-motion": "^12.20.1",
     "html-react-parser": "^5.2.5",
+    "moment": "^2.30.1",
     "next": "15.3.4",
     "nextjs-toploader": "^3.8.16",
     "react": "^19.0.0",
