--- a/.github/workflows/main_admin-portal.yml
+++ b/.github/workflows/main_admin-portal.yml
@@ -21,16 +21,27 @@ jobs:
       - name: Set up Node.js version
         uses: actions/setup-node@v3
         with:
-          node-version: '22.x'
-
-      - name: npm install, build, and test
+          node-version: "22.x"
+      - name: npm install
         run: |
           npm install
+          
+      - name: Build
+        run: |
           npm run build --if-present
+        env:
+          API_URL: "https://api.thefreeagentportal.com"
+          AUTH_URL: "https://auth.thefreeagentportal.com/auth"
+          SERVICE_NAME: "FAP Athlete Portal"
+          ENV: "production"
+          ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
+
+      - name: Run tests
+        run: |
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+        run: zip release.zip ./* .next -qr
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -41,7 +52,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -50,12 +61,12 @@ jobs:
 
       - name: Unzip artifact for deployment
         run: unzip release.zip
-      
-      - name: 'Deploy to Azure Web App'
+
+      - name: "Deploy to Azure Web App"
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'admin-portal'
-          slot-name: 'Production'
+          app-name: "admin-portal"
+          slot-name: "Production"
           package: .
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_68DFED038C2F41ECB0853AC72512089B }}
