--- a/.github/workflows/main_admin-portal.yml
+++ b/.github/workflows/main_admin-portal.yml
@@ -35,6 +35,9 @@ jobs:
           SERVICE_NAME: "FAP Athlete Portal"
           ENV: "production"
           ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
+      
+      - name: List build output
+        run: ls -l .next
 
       - name: Run tests
         run: |
