--- a/.github/workflows/main_admin-portal.yml
+++ b/.github/workflows/main_admin-portal.yml
@@ -35,13 +35,14 @@ jobs:
           SERVICE_NAME: "FAP Athlete Portal"
           ENV: "production"
           ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
+          TINYMCE_API_KEY: ${{ secrets.TINYMCE_API_KEY }}
 
       - name: Run tests
         run: |
           npm run test --if-present
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* .next -qr
+        run: zip -r release.zip .next public package.json package-lock.json
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
