--- a/.github/workflows/main_admin-portal.yml
+++ b/.github/workflows/main_admin-portal.yml
@@ -31,8 +31,8 @@ jobs:
           npm run build --if-present
         env:
           API_URL: "https://api.thefreeagentportal.com/api/v1"
-          AUTH_URL: "https://auth.thefreeagentportal.com/auth"
-          SERVICE_NAME: "FAP Athlete Portal"
+          AUTH_URL: "https://auth.thefreeagentportal.com/auth/login"
+          SERVICE_NAME: "FAP Admin Portal"
           ENV: "production"
           ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
           TINYMCE_API_KEY: ${{ secrets.TINYMCE_API_KEY }}
