Improves sidebar UX with responsive, collapsible design
Refactors layout and sidebar components for a more responsive and user-friendly experience.

Adds a mobile drawer for the sidebar, enables persistent sidebar collapse state, and updates styling for clearer navigation. Unifies sidebar behavior across devices and reduces clutter in the header.

Also introduces environment-based version display, simplifies header profile logic, and updates global breakpoints for consistency.

--- a/.github/workflows/main_admin-portal.yml
+++ b/.github/workflows/main_admin-portal.yml
@@ -33,6 +33,7 @@ jobs:
           API_URL: "https://api.thefreeagentportal.com/api/v1"
           AUTH_URL: "https://auth.thefreeagentportal.com/auth/login"
           SERVICE_NAME: "FAP Admin Portal"
+          VERSION: "1.2.1"
           ENV: "production"
           ENCRYPTION_KEY: ${{ secrets.ENCRYPTION_KEY }}
           TINYMCE_API_KEY: ${{ secrets.TINYMCE_API_KEY }}
